--- a/flutter_application_1/ios/Runner/Info.plist
+++ b/flutter_application_1/ios/Runner/Info.plist
@@ -45,5 +45,10 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+    <string>We need access to your camera to upload profile photos.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>We need access to your photo library to upload profile photos.</string>
+
 </dict>
 </plist>
